# floppy

./: .clang-format  .clang-tidy  .clang-tidy-docs  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Doxyfile-mcss  LICENSE  README.md  angle_8h.html  angle_8h.js  angle_8h__dep__incl.map  angle_8h__dep__incl.md5  angle_8h__incl.map  angle_8h__incl.md5  angle_8h_source.html  annotated.html  annotated_dup.js  backports_8h_source.html  backtrace_8h_source.html  backward_8hpp_source.html  bug.html  bytearray_8h_source.html  classbackward_1_1Colorize-members.html  classbackward_1_1Colorize.html  classbackward_1_1Printer-members.html  classbackward_1_1Printer.html  classbackward_1_1SignalHandling-members.html  classbackward_1_1SignalHandling.html  classbackward_1_1SnippetFactory-members.html  classbackward_1_1SnippetFactory.html  classbackward_1_1SourceFile-members.html  classbackward_1_1SourceFile.html  classbackward_1_1SourceFile.js  classbackward_1_1StackTrace-members.html  classbackward_1_1StackTrace.html  classbackward_1_1StackTraceImpl-members.html  classbackward_1_1StackTraceImpl.html  (+1142 more)
.github/workflows/: doxygen-gh-pages.yml
cmake/: LinkMSVCRT.cmake  floppy-config.cmake.in
d0/d22/: classfloppy_1_1math_1_1size2d.html  classfloppy_1_1math_1_1size2d.js
d0/d4a/: conceptfloppy_1_1concepts_1_1object.html
d0/d56/: structfloppy_1_1gfx_1_1color_1_1cmyka__t.html  structfloppy_1_1gfx_1_1color_1_1cmyka__t.js
d0/da1/: classfloppy_1_1serialization_1_1serialization__error__inherit__graph.map
d0/da9/: classconanfile_1_1FloppyRecipe-members.html  namespacefloppy_1_1serialization.html  namespacefloppy_1_1serialization.js
d0/dd3/: conceptfloppy_1_1concepts_1_1enum__.html
d0/dde/: structfloppy_1_1numbers_1_1detail_1_1number__base-members.html
d0/de4/: predefs_8h_source.html
d0/dee/: structfloppy_1_1traits_1_1non__copyable-members.html
d0/df7/: structfloppy_1_1math_1_1scale__coll__graph.map  structfloppy_1_1math_1_1scale__coll__graph.md5
d1/d21/: graphics_8h__incl.map  graphics_8h__incl.md5
d1/d26/: classfloppy_1_1math_1_1vector2d__coll__graph.map  classfloppy_1_1math_1_1vector2d__coll__graph.md5
d1/d39/: angle_8h__dep__incl.map  angle_8h__dep__incl.md5
d1/d5d/: conceptfloppy_1_1concepts_1_1formattable.html
d1/d7f/: classfloppy_1_1math_1_1length-members.html
d1/d82/: structfloppy_1_1traits_1_1formattable__inherit__graph.map  structfloppy_1_1traits_1_1formattable__inherit__graph.md5  test__print__helpers_8cc_source.html
d1/d93/: namespacefloppy_1_1log.html  namespacefloppy_1_1log.js
d1/da0/: structfloppy_1_1gfx_1_1color_1_1hsla__t-members.html
d1/dab/: vector2d_8h.html  vector2d_8h.js  vector2d_8h_source.html
d1/db2/: structfmt_1_1formatter_3_01T_01_4-members.html
d1/dde/: structfloppy_1_1gfx_1_1color_1_1hsva__t-members.html
d1/de8/: structfmt_1_1formatter_3_01floppy_1_1meta_1_1version_01_4.html
d2/d0e/: structfloppy_1_1gfx_1_1color_1_1hsla__t.html  structfloppy_1_1gfx_1_1color_1_1hsla__t.js
d2/d28/: color_8h__incl.map  color_8h__incl.md5
d2/d2c/: configuration_8h_source.html
d2/d47/: structfloppy_1_1math_1_1numbers_1_1pi.html
d2/d49/: structfloppy_1_1ranges_1_1detail_1_1to__helper.html
d2/d87/: structfmt_1_1formatter_3_01floppy_1_1meta_1_1project__meta_01_4.html
d2/d9f/: backports_8h_source.html
d2/da6/: namespacefloppy_1_1log_1_1level.html
d2/db7/: conceptfloppy_1_1serialization_1_1serializable__and__deserializable.html
d2/dcc/: length_8h__dep__incl.map  length_8h__dep__incl.md5
d2/de7/: classfloppy_1_1meta_1_1project__meta.html  classfloppy_1_1meta_1_1project__meta.js
d2/ded/: structfloppy_1_1traits_1_1pin__inherit__graph.map  structfloppy_1_1traits_1_1pin__inherit__graph.md5
d2/df5/: length_8h__incl.map  length_8h__incl.md5  structfloppy_1_1traits_1_1non__movable.html
docs/: annotated.html  classfloppy_1_1filesystem_1_1application__dirs.html  classfloppy_1_1meta_1_1project__meta.html  classfloppy_1_1platform.html  files.html  group__macros.html  index.html  modules.html  namespacefloppy.html  namespacefloppy_1_1concepts.html  namespacefloppy_1_1filesystem.html  namespacefloppy_1_1literals.html  namespacefloppy_1_1logger.html  namespacefloppy_1_1meta.html  namespacefloppy_1_1platform.html  namespacefloppy_1_1print__helpers.html  namespacefloppy_1_1print__helpers_1_1detail.html  namespacefloppy_1_1ranges.html  namespacefloppy_1_1rtti.html  namespacefloppy_1_1traits.html  namespacefloppy_1_1traits_1_1detail.html  namespacefloppy_1_1types.html  namespaces.html  namespacestd.html  pages.html  searchdata-v2.js  structfloppy_1_1meta_1_1project__version.html  structfloppy_1_1one__of.html  structfloppy_1_1ostream__formatter.html  structfloppy_1_1plain__type.html  structfloppy_1_1source__location.html  structfloppy_1_1traits_1_1detail_1_1formattable__base.html  structfloppy_1_1traits_1_1formattable.html  structfloppy_1_1traits_1_1non__copyable.html  structfloppy_1_1traits_1_1non__movable.html  structfloppy_1_1traits_1_1pin.html  structfloppy_1_1traits_1_1singleton.html  structfmt_1_1formatter_3_01_t_01_4.html  structsource__location.html
doxygen/: header.html
scripts/: README.md  deploy-local.py  tag.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+110 more)
src/: configuration.cc  contracts.cc  directories.cc
tests/: CMakeLists.txt  test_config.cc  test_corefn.cc  test_death.cc  test_directories.cc  test_euclid_angle.cc  test_euclid_length.cc  test_euclid_point2d.cc  test_euclid_scale.cc  test_euclid_size2d.cc  test_euclid_vector2d.cc  test_graphics_color.cc  test_logging.cc  test_main.cc  test_memory.cc  test_platform.cc  test_print_helpers.cc  test_serialization.cc  test_traits.cc
(+352 files in other folders)
